# Logos

./: .gitignore  AGENTS.md  CLAUDE.md  HACK.md  README.md  REPO.md  SPEC.md  STATUS.md  demo.sh
.github/workflows/: ci.yml
src/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  scaffold.toml
src/app/: README.md
src/app/basecamp-forum/: Main.qml  manifest.json  metadata.json  ui-tests.mjs
src/app/basecamp-forum/core-module/: Cargo.toml
src/app/basecamp-forum/core-module/src/: lib.rs
src/crates/moderation-sdk/: Cargo.toml
src/crates/moderation-sdk/src/: lib.rs
src/crates/protocol-core/: Cargo.toml
src/crates/protocol-core/src/: cert.rs  field.rs  hash.rs  lib.rs  merkle.rs  shamir.rs  state.rs  threshold.rs  types.rs
src/crates/registry-sim/: Cargo.toml
src/crates/registry-sim/src/: main.rs
src/crates/risc0-statement/: Cargo.toml
src/crates/risc0-statement/src/: lib.rs
src/crates/slash-verifier/: Cargo.toml
src/crates/slash-verifier/src/: lib.rs  main.rs
src/docs/: api.md  noir.md  performance.md  protocol.md  submission.md  success_criteria.json  threat-model.md
src/lean/: lake-manifest.json  lakefile.lean
src/lean/AnonymousForum/: Basic.lean  Invariants.lean  Shamir.lean  ShamirTargets.lean  Slash.lean
src/methods/: Cargo.toml
src/methods/guest/: Cargo.toml
src/noir/post_binding/: Nargo.toml  Prover.toml  README.md
src/noir/post_binding/src/: main.nr
src/registry/: README.md
src/registry/idl/: lp0016_registry.idl.json  lp0016_registry.json
src/registry/lez-program-stub/: Cargo.toml
src/registry/lez-program-stub/src/: lib.rs
src/registry/lp0016-registry/: Cargo.toml
src/registry/lp0016-registry/src/: lib.rs
src/registry/program_ids/: README.md  localnet.txt
src/scripts/: check_basecamp_inspector.py  check_lez_runtime.py  check_live_network_deploy.py  check_noir_icing.py  check_risc0_proof_performance.py  collect_localnet_evidence.py  demo_e2e.py  demo_e2e.sh  local_submission_gate.py  lp0016_sim.py  make_submission_video.py  measure_cu.sh  package_basecamp.sh  test_basecamp_package.py  test_phase_closure.py  test_protocol.py  test_runtime_checks.py  test_success_criteria.py
src/zk/: README.md
src/zk/membership-guest/: Cargo.toml
src/zk/membership-guest/src/: main.rs
src/zk/membership-host/: Cargo.toml
src/zk/membership-host/src/: lib.rs
submission/: README.md
