[workspace]
members = [
  "crates/protocol-core",
  "crates/moderation-sdk",
  "crates/registry-sim",
  "crates/slash-verifier",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82.0"
license = "MIT OR Apache-2.0"
authors = ["LP-0016 contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "=4.5.50", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
