[package]
name = "slash-verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
protocol-core = { path = "../protocol-core" }
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
