[package]
name = "lp0016-membership-guest"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LP-0016 RISC0 guest that proves the membership-and-post statement."

# This crate is excluded from the top-level workspace so the default
# `cargo build --workspace` does not require `cargo-risczero`. Build it via:
#
#     cd src/zk/membership-guest && cargo build --release --target riscv32im-risc0-zkvm-elf
#
# after installing the RISC0 toolchain (`rzup install`).
[workspace]

[features]
default = []
# Enables the real `risc0-zkvm` guest entry point. Without this feature the
# crate compiles as an empty library (handy for IDE / rust-analyzer).
risc0 = ["dep:risc0-zkvm"]

[dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
risc0-statement = { path = "../../crates/risc0-statement", features = ["fast_membership_proof"] }
risc0-zkvm = { version = "3", default-features = false, features = ["std"], optional = true }
# RISC0's current guest-builder image uses rustc 1.88.0-dev. ruint 1.18
# requires rustc 1.90, so pin the latest 1.88-compatible release here.
ruint = "=1.17.2"

[[bin]]
name = "lp0016-membership-guest"
path = "src/main.rs"
